--- a/EmailServiceLambda/EmailServiceLambda.csproj
+++ b/EmailServiceLambda/EmailServiceLambda.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.5.3" />
     <PackageReference Include="AWSSDK.Kinesis" Version="3.5.0.36" />
     <PackageReference Include="AWSSDK.SimpleEmail" Version="3.5.0.36" />
+    <PackageReference Include="AWSXRayRecorder" Version="2.9.0" />
   </ItemGroup>
 
 </Project>
